Title: Parsing almost done, still need improve code Content: 	Add ft_free_all.c to be more general. 	Add ft_charchr.c to search a char in a string. 	Add ft_check_n_parse_map.c to check and parse map. 	Modify lots of functions, update Makefile, update headers, 	.gitignore

--- a/libft/Makefile
+++ b/libft/Makefile
@@ -6,7 +6,7 @@
 #    By: cdai <marvin@42.fr>                        +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2019/11/04 14:48:38 by cdai              #+#    #+#              #
-#    Updated: 2020/01/10 16:38:12 by cdai             ###   ########.fr        #
+#    Updated: 2020/01/19 17:28:24 by cdai             ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -56,7 +56,7 @@ SRCS	=	\
 			ft_lstmap.c\
 			get_next_line.c\
 			get_next_line_utils.c\
-			
+			ft_charchr.c\
 
 OBJS	=	${SRCS:.c=.o}
 
